# object-recognition

./: .hgignore  CMakeLists.txt
include/: log.h  qr_detect.h  quad_tree.h
src/: qr_detect.cc  qr_video_test.cc  qt_test.cc  quad_tree.cc
utils/: CMakeLists.txt
utils/scripts/: automate_opencvcreatesamples.py  vec_merge.py
utils/src/: a.out  vec_merge.cc
